api: auth via telegram
