# identity-service/src/main/java/com/yana/identityservice/entity/User.java
@@ -37,6 +37,9 @@ public class User implements UserDetails {
     private String firstName;
     private String lastName;
 
+    @Column(unique = true)
+    private String telegramId;
+
     @Email
     @NotBlank(message = "Email is required")
     @Pattern(
